# bin-inspect

./: .clangd  CMakeLists.txt  README.md
build-x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/toolchains/: arm64-linux.cmake  riscv64-linux.cmake  x86_64-linux.cmake
include/: loader.h  utils.h
scripts/: build_all.sh
src/: loader.cpp
tests/: binspect.cpp  demo_loader.cpp  elf_test  elf_test.c
